<resources>
    <string name="app_name">Hypertension</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="signup">สมัครสมาชิก</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="title">ระบบช่วยเหลือผู้ป่วยโรคความดันโลหิตสูง</string>
    <string name="title_user">ชื่อผู้ใช้</string>
    <string name="title_password">รหัสผ่าน</string>
    <string name="title_personal">ดูข้อมูลส่วนตัว</string>
    <string name="title_drug">แสดงข้อมูลยา</string>
    <string name="title_emergency">โทรฉุกเฉิน</string>
    <string name="title_chat">คุยกับพยาบาล</string>
    <string name="title_report">ดูรายงาน</string>
    <string name="title_logout">ออกจากระบบ</string>
    <string name="title_name">ชื่อ-นามสกุล</string>
    <string name="title_bod">วัน-เดือน-ปีเกิด</string>
    <string name="title_height">ส่วนสูง (cm)</string>
    <string name="title_weight">น้ำหนัก (kg)</string>
    <string name="title_allergy">ประวัติการแพ้ยา</string>
    <string name="title_breakfast">เวลาเช้า</string>
    <string name="title_lunch">เวลากลางวัน</string>
    <string name="title_dinner">เวลาเย็น</string>
    <string name="title_main">กลับสู่หน้าหลัก</string>
    <string name="med_brand">ชื่อทางการค้า</string>
    <string name="med_name">ชื่อยา</string>
    <string name="med_charactor">คุณสมบัติ</string>
    <string name="med_affect">ผลข้างเคียง</string>
    <string name="message">พิมพ์ข้อความ</string>
    <string name="send_message">ส่งข้อความ</string>
    <string name="remember_login">จำข้อมูล</string>
</resources>
