<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_medicine_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.openworldtravels.www.hypertension.MedicineDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/no_image"
                android:id="@+id/imageView3"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:scrollbars="vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_width="match_parent">

                <TextView
                    android:text="@string/med_brand"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_marginTop="15dp"
                    android:textStyle="normal|bold"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/med_name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/brandTextView"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameTextView"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/med_charactor"
                android:layout_height="wrap_content"
                android:id="@+id/textView25"
                android:layout_weight="0"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:layout_width="150dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/charactorTextView"
                android:layout_weight="0"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:maxLines="5" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/med_affect"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView26"
                android:layout_weight="0"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/affectTextView"
                android:layout_weight="0"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
